--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-.header{
-    text-align:center
+* {
+    box-sizing: border-box;
+}
+
+.header {
+    text-align: center;
 }
 
 .calculator {
@@ -18,17 +22,17 @@
     align-items: center;
     justify-content: right;
     background-color: black;
+    padding: 10px;
 }
 
-.output-field {
+#output-field {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
     font-weight: bold;
-    padding: 10px;
 }
 
-.keypad {
+.keypad-section {
     display: flex;
     flex-direction: column;
     width: 100%;
